implement update method
